# PitLaneInsiders

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: keep_alive.yaml
Backend/: app.py
Backend/mcp_server/: mcp_f1.py
Backend/utils/: agent_workflow.py  chat_history.py  news.py
Backend/utils/user_db/: login.db
aiModel/: cleaned_v2.csv  notebook.ipynb
backend/: app.py  idk.html  predictions.html
backend/templates/: predictions.html
docs/: CNAME  chatbot.html  drivers.html  index.html  login.html  quiz.html  signup.html  teams.html
docs/css/style_drivers/: styleDrivers.css
docs/css/style_quiz/: quiz_style.css
docs/js/: chatbot.js  drivers.js  indexpage.js  news.js  teams.js
frontend/: chatbot.html  diverstrial.html  drivers.html  f1info.html  home.html  index.html  style.css  teams.html
frontend/css/style_quiz/: quiz_style.css.map  quiz_style.scss
frontend/quiz/: quiz.html  script.js  style.css  style.scss
frontend/styl/: styleDrivers.css
src/Backend/: app.py
src/Backend/mcp_server/: mcp_config.json  mcp_f1.py
src/Backend/utils/user_db/: dbmaker.py  valueinsert.py
src/Discord_bot/: keep_alive.py  main.py
src/Frontend/: chatbot.html  drivers.html  home.html  login.html  quiz.html  signup.html  teams.html
src/Frontend/css/style_quiz/: quiz_script.js
