[project]
name = "PitLaneInsiders"
version = "0.1.0"
description = "F1 fan fullstack project bt PitLane Insiders Team."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.5.10",
    "discord-py>=2.5.2",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.2",
    "fastapi>=0.115.12",
    "fastf1>=3.5.3",
    "flask>=3.1.1",
    "googlesearch-python>=1.3.0",
    "mcp>=1.9.3",
    "openai>=1.85.0",
    "polars>=1.30.0",
    "pycountry>=24.6.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
    "wikipedia>=1.4.0",
]
